# rgx

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
rgx/: __init__.py  entities.py  meta.py  unicode_meta.py
test/: test_creation.py  test_groups.py  test_operations.py  test_url.py
