[tool.poetry]
name = "rgx"
version = "1.3.3"
description = "Typed, simple and readable regexp generation"
authors = ["Dmitry Gritsenko <rgx@evtn.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/evtn/rgx"
homepage = "https://github.com/evtn/rgx"
keywords = ["regex", "regexp", "regular expressions"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"