[tool.poetry]
name = "rgx"
version = "2.0.0"
description = "Typed, simple and readable regexp generation"
authors = ["Dmitry Gritsenko <rgx@evtn.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/evtn/rgx"
homepage = "https://github.com/evtn/rgx"
keywords = ["regex", "regexp", "regular expressions"]

[tool.poetry.dependencies]
python = "^3.7"
wordstreamer = "^0.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"